--- a/src/main/resources/color.properties
+++ b/src/main/resources/color.properties
@@ -1,5 +1,5 @@
 main_panel_bg=#FFFFFF
 
-module_panel_bg=#13293D
-module_button_bg=#006494
-module_button_fc=#E8F1F2
+module_panel_bg=#404040
+module_button_bg=#B71427
+module_button_fc=#FFFFFF
