--- a/src/main/resources/color.properties
+++ b/src/main/resources/color.properties
@@ -1,5 +1,31 @@
-main_panel_bg=#FFFFFF
+main_panel_bg=#ECECEA
 
 module_panel_bg=#404040
 module_button_bg=#B71427
 module_button_fc=#FFFFFF
+ 
+menu_panel_bg=#B71427
+menu_button_bg=#404040
+menu_button_fc=#FFFFFF
+
+mi_panel_bg=#ECECEA
+mi_button_bg=#D0DEF5
+mi_button_fc=#05193B
+
+label_bg=191,215,255
+label_fg=30,30,100
+
+button_bg=240,240,255
+button_fg=0,0,0
+
+title_bg=#ECECEA
+title_fg=255,255,255
+
+title_bar_bg=#F6F6F6
+title_bar_fg=#2B2B2B
+
+title_border_bg=0,0,255
+
+table_even_row=238,246,255
+table_odd_row=255,255,255
+status_bg=#E9E581
