--- a/src/main/resources/color.properties
+++ b/src/main/resources/color.properties
@@ -28,4 +28,6 @@ title_border_bg=0,0,255
 
 table_even_row=238,246,255
 table_odd_row=255,255,255
-status_bg=#E9E581
+status_bg=#5F5F5F
+status_fg=#FFFFFF
+favorite_bg= #CDDAEC
