--- a/src/main/resources/color.properties
+++ b/src/main/resources/color.properties
@@ -12,6 +12,9 @@ mi_panel_bg=#ECECEA
 mi_button_bg=#D0DEF5
 mi_button_fc=#05193B
 
+mi-panel-title-bg=#B71427
+mi-panel-title-fg=#FFFFFF
+
 label_bg=191,215,255
 label_fg=30,30,100
 
