--- a/src/main/resources/color.properties
+++ b/src/main/resources/color.properties
@@ -18,8 +18,8 @@ mi-panel-title-fg=#FFFFFF
 label_bg=191,215,255
 label_fg=30,30,100
 
-button_bg=240,240,255
-button_fg=0,0,0
+button_bg=#D0DEF5
+button_fg=#000000
 
 title_bg=#ECECEA
 title_fg=255,255,255
