--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jalalkiswani</groupId>
-	<version>0.0.8</version>
+	<version>0.0.8-SNAPSHOT</version>
 	<artifactId>smart-desktop</artifactId>
 
 	<name>smart-desktop</name>
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>com.jalalkiswani</groupId>
 			<artifactId>jk-util</artifactId>
-			<version>0.0.8</version>
+			<version>0.0.9-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jalalkiswani</groupId>
