--- a/src/main/resources/com/fs/security/meta/en_lbl.properties
+++ b/src/main/resources/com/fs/security/meta/en_lbl.properties
@@ -67,7 +67,7 @@ MI_FEED_BACK=Feedback
 MI_BACKUP_DATABASE=Database Backup
 BACKUP_CREATED_SUCC=Backup created succ.
 ARE_YOUR_SURE_YOU_WANT_TO_LOG_OUT=Logout , are you sure?
-privilege_desc=Privilege name
+privilege_desc=Description
 concat_ws('',sec_privileges.privilege_id)=Privilege Id
 ERR_SEND=Send feedback
 sec_boolean.boolean_name=Disabled
