--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
 			<artifactId>jk-db</artifactId>
 			<version>0.0.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
